syntax = "proto3";

package calculator;

option go_package = "github.com/ttnsgn/grpc-go-handson/calculator/proto";

message PrimeRequest {
  int32 input_number = 1;
}

message PrimeResponse {
  int32 result = 1;
}
